--- a/_config.yml
+++ b/_config.yml
@@ -106,7 +106,7 @@ analytics:
 author:
   name             : "킹래빗"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "데이터 분석 / 시각화 공부해요"
+  bio              : "데이터 분석 / 시각화 공부해요 //"
   location         : "Seoul, South Korea"
   email            :
   links:
